[project]
name = "job-matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=1.1.7",
    "playwright>=1.57.0",
]
